<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/fragmentArtistDetail_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragmentArtistDetail_cl_header"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/fragmentArtistDetail_iv_background"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_launcher_background" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:alpha=".5"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/fragmentArtistDetail_tv_artistName"
                    style="@style/Title24PxBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Khalid" />

                <TextView
                    android:id="@+id/fragmentArtistDetail_tv_artistCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    tools:text="Toronto, Canada - RnB" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentArtistDetail_cl_header">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragmentArtistDetail_cl_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_m">


                <TextView
                    android:id="@+id/fragmentArtistDetail_tv_artistDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Lorem ipsium sjdskoldn;ajdkgdkhaedfkhegdkahgedh
                    kgdkhagzdkag;jabdkjazgdkagzdkzdkagdkakdgazkdjgazkjd" />

                <LinearLayout
                    android:id="@+id/fragmentArtistDetail_ll_rootAlbums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentArtistDetail_tv_artistDesc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/fragmentArtistDetail_tv_albums"
                        style="@style/Title20PxBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:text="@string/fragmentArtistDetail_tv_label_albums"
                        tools:text="Albums (12)" />

                    <View
                        android:id="@+id/fragmentArtistDetail_tv_albumsDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:background="@color/grey"
                        android:text="@string/fragmentAlbumDetail_tv_label_tracks" />

                    <LinearLayout
                        android:id="@+id/fragmentArtistDetail_ll_albums"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragmentArtistDetail_ll_tracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/spacing_xs"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentArtistDetail_ll_rootAlbums"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/fragmentArtistDetail_tv_tracks"
                        style="@style/Title20PxBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:text="@string/fragmentArtistDetail_tv_label_topTracks"
                        tools:text="Titres" />

                    <View
                        android:id="@+id/fragmentArtistDetail_tv_tracksDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/spacing_m"
                        android:background="@color/grey"
                        android:text="@string/fragmentAlbumDetail_tv_label_tracks" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragmentArtistDetail_rv_tracks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/fragmentArtistDetail_ll_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <TextView
                android:id="@+id/fragmentArtistDetail_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Une erreur est survenue, vérifiez votre connexion" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentArtistDetail_bt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/button_label_error_retry"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragmentArtistDetail_tb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_detail"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>